feat: favicon.ico 추가